--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "goit-react-hw-08-phonebook",
-  "homepage": "https://taisiia-filikova.github.io/goit-react-hw-08-phonebook",
-  "version": "0.1.0",
+   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -12,7 +11,6 @@
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
     "framer-motion": "^3.2.1",
-    "gh-pages": "^3.1.0",
     "modern-normalize": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -32,8 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+     "predeploy": "npm run build",
+     "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
